<resources>
    <string name="app_name">Marketim</string>
    <string name="my_store">MARKETİM</string>
    <string name="username">Kullanıcı Adı</string>
    <string name="password">Şifre</string>
    <string name="remember_me">Beni Hatırla</string>
    <string name="login">Giriş</string>
    <string name="empty_info">Kullanıcı adı veya şifre boş bırakılamaz</string>
    <string name="wrong_user_info">Kullanıcı adı veya şifre hatalı</string>
    <string name="orders">Siparişlerim</string>
    <string name="logout">Çıkış Yap</string>
    <string name="problem_has_occurred">Bir sorun oluştu</string>
    <string name="not_found_network_conn">İnternet bağlantısı bulunamadı</string>
    <string name="product_state">Ürün Durumu</string>
    <string name="group_indicator">Grup Göstergesi</string>
    <string name="dialog_title_logout">Çıkış yapmak istiyor musunuz?</string>
    <string name="yes">Evet</string>
    <string name="no">Hayır</string>
</resources>
