<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:bind="http://schemas.android.com/tools">

    <data>

        <variable
            name="viewModel"
            type="com.merveylcu.marketim.view.order.OrdersViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/holo_red_dark"
            android:gravity="center"
            android:text="@string/my_store"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

        </com.google.android.material.textview.MaterialTextView>

        <ExpandableListView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:divider="@null"
            android:groupIndicator="@null"
            app:layout_constraintBottom_toTopOf="@+id/btn_orders"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title"
            bind:adapter_order_list="@{viewModel.orderList}" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_orders"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/orders"
            android:textAllCaps="false"
            android:textColor="@android:color/holo_red_dark"
            app:backgroundTint="@android:color/white"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btn_logout"
            app:layout_constraintStart_toStartOf="parent"
            app:rippleColor="@android:color/holo_red_light"
            app:strokeColor="@android:color/holo_red_dark" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            style="@style/Widget.MaterialComponents.Button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:onClick="@{viewModel::logout}"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            app:backgroundTint="@android:color/holo_red_dark"
            app:cornerRadius="5dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/btn_orders"
            app:rippleColor="@android:color/holo_red_light" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</layout>